[gd_scene load_steps=4 format=3 uid="uid://bx1wovv0p182j"]

[ext_resource type="Script" path="res://map/map_old.gd" id="1_im2q5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ih5t2"]
bg_color = Color(0.886275, 0.878431, 0.796078, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_iqo7b"]
center_offset = Vector3(0, 0, -10)
orientation = 2

[node name="map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_im2q5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ih5t2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="battle1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "battle"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="battle2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "battle"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="campfire1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "camp"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="battle3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "battle"

[node name="quit" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/quit"]
layout_mode = 2
offset_left = -205.0
offset_top = 95.0
offset_right = -151.0
offset_bottom = 335.0
size_flags_horizontal = 4
alignment = 1

[node name="battle4" type="Button" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "battle"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="campfire2" type="Button" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "camp"

[node name="VSeparator4" type="VSeparator" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="battle5" type="Button" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "battle"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="campfire3" type="Button" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "camp"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="battle6" type="Button" parent="PanelContainer/MarginContainer/quit/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "battle"

[node name="Line2D" type="Line2D" parent="PanelContainer/MarginContainer"]
points = PackedVector2Array(346, 45, 388, 100)
width = 1.0
default_color = Color(0.341176, 0.341176, 0.341176, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0.862745, 0.890196, 0.780392, 1)
self_modulate = Color(0.960784, 1, 0.992157, 1)
position = Vector2(320, 180)
scale = Vector2(320, 180)
mesh = SubResource("PlaneMesh_iqo7b")

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(-211, 26)
points = PackedVector2Array(512, 22, 514, 47, 514, 77)
width = 5.0
default_color = Color(0.396889, 0.396889, 0.396889, 1)

[node name="Line2D3" type="Line2D" parent="."]
visible = false
position = Vector2(-136.522, 247.049)
scale = Vector2(0.869565, 0.238198)
points = PackedVector2Array(513.5, 19.9896, 514, 47, 514.65, 130.707, 512.35, 267.677)
width = 5.0
default_color = Color(0.396889, 0.396889, 0.396889, 1)

[node name="Line2D2" type="Line2D" parent="."]
visible = false
position = Vector2(-205, 109)
points = PackedVector2Array(512, 22, 514, 47, 515, 115)
width = 5.0
default_color = Color(0.396889, 0.396889, 0.396889, 1)

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/battle1" to="." method="_on_battle_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/battle1" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/battle2" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/campfire1" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/battle3" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/battle4" to="." method="_on_battle_4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/battle4" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/campfire2" to="." method="_on_campfire_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/campfire2" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/battle5" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/campfire3" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/quit/VBoxContainer2/battle6" to="." method="_on_start_pressed"]
